# climaAUS

./: README.md  app_gradio.py  guardar_columnas_modelo.py  importar_union_bd.py  pyproject.toml  requirements.txt  ver_columnas_modelo.py
conf/base/: catalog.yml  parameters_codificacion_split.yml  parameters_comparacion_modelos.yml  parameters_decision_tree.yml  parameters_entrena_modelo.yml  parameters_entrenaprueba.yml  parameters_exploracion.yml  parameters_exploragrafico.yml  parameters_logistic_regression.yml  parameters_preparacion.yml  parameters_preparagrafico.yml  parameters_prueba.yml  parameters_random.yml  parameters_support_vector_machine.yml  parameters_union_datasets.yml
docs/source/: clima.pipelines.exploracion.rst  clima.pipelines.prueba.rst  clima.pipelines.rst  clima.rst  conf.py  index.rst  modules.rst
notebooks/: ClimaYCultivosAUS.ipynb
src/clima/: __main__.py  pipeline_registry.py  settings.py
src/clima/pipelines/decision_tree/: __init__.py  (+2 more)
tests/pipelines/codificacion_split/: test_pipeline.py
tests/pipelines/comparacion_modelos/: test_pipeline.py
tests/pipelines/decision_tree/: test_pipeline.py
tests/pipelines/entrena_modelo/: test_pipeline.py
tests/pipelines/entrenaprueba/: test_pipeline.py
tests/pipelines/exploracion/: test_pipeline.py
tests/pipelines/exploragrafico/: test_pipeline.py
tests/pipelines/logistic_regression/: test_pipeline.py
tests/pipelines/preparacion/: test_pipeline.py
tests/pipelines/preparagrafico/: test_pipeline.py
tests/pipelines/prueba/: test_pipeline.py
tests/pipelines/random/: test_pipeline.py
(+41 files in other folders)
